--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,8 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+//apply plugin: 'com.google.gms.google-services'//파이어베이스오류, https://stackoverflow.com/questions/72895721/firebasecloudmessaging-platformexception-platformexceptionnull-error-host-p
+
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
@@ -51,6 +53,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        minSdkVersion 19    //파이어베이스 작업하다 오류나서 추가
     }
 
     buildTypes {
@@ -68,4 +71,9 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //implementation platform('com.google.firebase:firebase-bom:30.2.0')
+    //implementation 'com.google.firebase:firebase-analytics'
+    //위 두줄은 파이어베이스 오류땜에, https://stackoverflow.com/questions/72895721/firebasecloudmessaging-platformexception-platformexceptionnull-error-host-p
+
 }
